Thu Jul 23 17:51:12 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/Event/EC_Gateway_IIOP.cpp:
        * orbsvcs/orbsvcs/Event/ECG_Mcast_Gateway.cpp
          is_gateway is a bool

        * orbsvcs/orbsvcs/Event/EC_ProxySupplier.cpp:
          Layout changes

        * orbsvcs/tests/Notify/Structured_Filter/Notify_Push_Consumer.cpp:
          Unicode fix, prefix increment

Thu Jul 23 17:50:12 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/LF_Event.inl:
          Fixed incorrect undef

Thu Jul 23 17:48:12 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * NEWS:
          Updated for next release

Thu Jul 23 02:11:02 CDT 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

	* TAO version 1.7.2 released.

Wed Jul 22 14:26:47 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/IFR_Service/IFR_Service.mpc:
          Reverted changes to add dependency on mcpp. Thanks for Adam pointing out
          that this broke one build

Tue Jul 21 11:43:47 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * be/be_helper.cpp:
          Use doxygen style of copyright

        * be/be_interface.cpp:
        * be/be_visitor_operation/operation_svs.cpp:
          Generate the facet servant as regular class and not as a template.
          This fixes several problems with visibility enabled

Mon Jul 20 07:51:47 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Sequence_Unit_Tests/string_sequence_tester.hpp:
          Fixed warnings on Solaris

Sun Jul 19 10:20:47 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_visitor_component/component_svs.cpp:
          Fixed compile warnings on HPUX

Thu Jul 16 00:41:28 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        Reverted this change, it breaks other platforms

        Wed Jul 15 16:10:28 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>
        * TAO_IDL/be/be_helper.cpp: